# kaleidoscope

./: README.md  kaleidoscope.cabal
main/: Kaleidoscope.hs
src/Kaleidoscope/: AST.hs  Codegen.hs  Emit.hs  JIT.hs  Parser.hs
