name:               kaleidoscope
version:            0.0
stability:          Experimental
build-type:         Simple
cabal-version:      >=1.14


library
    default-language:   Haskell2010
    ghc-options:        -Wall
    build-depends:
        base ==4.*,
        containers,
        mtl,
        pretty,
        parsec,
        llvm-general ==3.2.*,
        llvm-general-pure ==3.2.*
    hs-source-dirs:     src
    exposed-modules:
        Kaleidoscope.AST
        Kaleidoscope.Parser
        Kaleidoscope.Codegen
        Kaleidoscope.Emit


executable Kaleidoscope
    default-language:   Haskell2010
    ghc-options:        -Wall
    build-depends:
        base ==4.*,
        mtl,
        haskeline,
        llvm-general ==3.2.*,
        llvm-general-pure ==3.2.*,
        kaleidoscope
    hs-source-dirs:     main
    main-is:            Kaleidoscope.hs

